Package_Tools/include-C/suitesparse/SuiteSparse_config.pp


function SuiteSparse_config_malloc_func_get:function (para1:Tsize_t):pointer;cdecl;external;
function SuiteSparse_config_calloc_func_get:function (para1:Tsize_t; para2:Tsize_t):pointer;cdecl;external;
function SuiteSparse_config_realloc_func_get:function (para1:pointer; para2:Tsize_t):pointer;cdecl;external;
function SuiteSparse_config_free_func_get:procedure (para1:pointer);cdecl;external;
(* Const before type ignored *)
function SuiteSparse_config_printf_func_get:function (para1:Pchar; args:array of const):longint;cdecl;external;
function SuiteSparse_config_printf_func_get:function (para1:Pchar):longint;cdecl;external;
function SuiteSparse_config_hypot_func_get:function (para1:Tdouble; para2:Tdouble):Tdouble;cdecl;external;
function SuiteSparse_config_divcomplex_func_get:function (para1:Tdouble; para2:Tdouble; para3:Tdouble; para4:Tdouble; para5:Pdouble; 
                    para6:Pdouble):longint;cdecl;external;
{ The SuiteSparse_config_*_set methods modify the contents of the struct: }
procedure SuiteSparse_config_malloc_func_set(malloc_func:function (para1:Tsize_t):pointer);cdecl;external;
procedure SuiteSparse_config_calloc_func_set(calloc_func:function (para1:Tsize_t; para2:Tsize_t):pointer);cdecl;external;
procedure SuiteSparse_config_realloc_func_set(realloc_func:function (para1:pointer; para2:Tsize_t):pointer);cdecl;external;
procedure SuiteSparse_config_free_func_set(free_func:procedure (para1:pointer));cdecl;external;
(* Const before type ignored *)
procedure SuiteSparse_config_printf_func_set(printf_func:function (para1:Pchar; args:array of const):longint);cdecl;external;
procedure SuiteSparse_config_printf_func_set(printf_func:function (para1:Pchar):longint);cdecl;external;
procedure SuiteSparse_config_hypot_func_set(hypot_func:function (para1:Tdouble; para2:Tdouble):Tdouble);cdecl;external;
procedure SuiteSparse_config_divcomplex_func_set(divcomplex_func:function (para1:Tdouble; para2:Tdouble; para3:Tdouble; para4:Tdouble; para5:Pdouble; 
                       para6:Pdouble):longint);cdecl;external;
{ The SuiteSparse_config_*_func methods are wrappers that call the function }
{ pointers in the struct.  Note that there is no wrapper for the printf_func. }
{ See the SUITESPARSE_PRINTF macro instead. }
function SuiteSparse_config_malloc(s:Tsize_t):pointer;cdecl;external;
function SuiteSparse_config_calloc(n:Tsize_t; s:Tsize_t):pointer;cdecl;external;
function SuiteSparse_config_realloc(para1:pointer; s:Tsize_t):pointer;cdecl;external;
procedure SuiteSparse_config_free(para1:pointer);cdecl;external;
function SuiteSparse_config_hypot(x:Tdouble; y:Tdouble):Tdouble;cdecl;external;
function SuiteSparse_config_divcomplex(xr:Tdouble; xi:Tdouble; yr:Tdouble; yi:Tdouble; zr:Pdouble; 
           zi:Pdouble):longint;cdecl;external;
procedure SuiteSparse_start;cdecl;external;
{ called to start SuiteSparse }
procedure SuiteSparse_finish;cdecl;external;
{ called to finish SuiteSparse }
{ pointer to allocated block of memory }
{ number of items to malloc (>=1 is enforced) }
{ sizeof each item }
function SuiteSparse_malloc(nitems:Tsize_t; size_of_item:Tsize_t):pointer;cdecl;external;
{ pointer to allocated block of memory }
{ number of items to calloc (>=1 is enforced) }
{ sizeof each item }
function SuiteSparse_calloc(nitems:Tsize_t; size_of_item:Tsize_t):pointer;cdecl;external;
{ pointer to reallocated block of memory, or }
{/to original block if the realloc failed. }
{ new number of items in the object }
{ old number of items in the object }
{ sizeof each item }
{ old object to reallocate }
{ 1 if successful, 0 otherwise }
function SuiteSparse_realloc(nitems_new:Tsize_t; nitems_old:Tsize_t; size_of_item:Tsize_t; p:pointer; ok:Plongint):pointer;cdecl;external;
{ always returns NULL }
{ block to free }
function SuiteSparse_free(p:pointer):pointer;cdecl;external;
{ start the timer }
{ output, contents undefined on input }
procedure SuiteSparse_tic(tic:array[0..1] of Tdouble);cdecl;external;
{ return time in seconds since last tic }
{ input: from last call to SuiteSparse_tic }
function SuiteSparse_toc(tic:array[0..1] of Tdouble):Tdouble;cdecl;external;
{ returns current wall clock time in seconds }
function SuiteSparse_time:Tdouble;cdecl;external;
{ returns sqrt (x^2 + y^2), computed reliably }
function SuiteSparse_hypot(x:Tdouble; y:Tdouble):Tdouble;cdecl;external;
{ complex division of c = a/b }
{ real and imaginary parts of a }
{ real and imaginary parts of b }
{ real and imaginary parts of c }
function SuiteSparse_divcomplex(ar:Tdouble; ai:Tdouble; br:Tdouble; bi:Tdouble; cr:Pdouble; 
           ci:Pdouble):longint;cdecl;external;
{ determine which timer to use, if any }
{ SuiteSparse printf macro }
{============================================================================== }
{ SuiteSparse version }
{============================================================================== }
{ SuiteSparse is not a package itself, but a collection of packages, some of }
{ which must be used together (UMFPACK requires AMD, CHOLMOD requires AMD, }
{ COLAMD, CAMD, and CCOLAMD, etc).  A version number is provided here for the }
{ collection itself, which is also the version number of SuiteSparse_config. }
{ returns SUITESPARSE_VERSION }
{ output, not defined on input.  Not used if NULL.  Returns }
{ the three version codes in version [0..2]: }
{ version [0] is SUITESPARSE_MAIN_VERSION }
{ version [1] is SUITESPARSE_SUB_VERSION }
{ version [2] is SUITESPARSE_SUBSUB_VERSION }
function SuiteSparse_version(version:array[0..2] of longint):longint;cdecl;external;
{$define SUITESPARSE_HAS_VERSION_FUNCTION}
const
  SUITESPARSE_DATE = 'Mar 2, 2024';  
  SUITESPARSE_MAIN_VERSION = 7;  
  SUITESPARSE_SUB_VERSION = 6;  
  SUITESPARSE_SUBSUB_VERSION = 1;  
{ version format x.y }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

function SUITESPARSE_VER_CODE(main,sub : longint) : longint;

{ was #define dname def_expr }
function SUITESPARSE_VERSION : longint; { return type might be wrong }

{ version format x.y.z }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SUITESPARSE__VERCODE(main,sub,patch : longint) : longint;

{ was #define dname def_expr }
function SUITESPARSE__VERSION : longint; { return type might be wrong }

{============================================================================== }
{ SuiteSparse interface to the BLAS and LAPACK libraries }
{============================================================================== }
{ Several SuiteSparse packages rely on the BLAS/LAPACK libraries (UMFPACK }
{ CHOLMOD, and SPQR, and likely GraphBLAS in the future).  All of these }
{ packages are written in C/C++, but rely on the Fortran interface to }
{ BLAS/LAPACK.  SuiteSparse does not use the cblas / lapacke interfaces to }
{ these libraries, mainly because FindBLAS.cmake does not locate them (or at }
{ least does not locate their respective cblas.h and lapacke.h files).  In }
{ addition, the original definition of these files do not include a different }
{ name space for 64-bit integer versions.  Finally, Intel renames cblas.h as }
{ mkl_cblas.h.  As a result of these many portability issues, different }
{ implementations of those libraries extend them in different ways.  Thus, }
{ SuiteSparse simply calls the Fortran functions directly. }
{ However, the method for how C/C++ calling Fortran depends on the compilers }
{ involved.  This connection is handled by the FortranCInterface.cmake module }
{ of CMake. }
{ On typical systems (Linux with the GCC compiler for example, or on the Mac }
{ with clang) the Fortan name "dgemm" is called by C as "dgemm_",  Other }
{ systems do not append the underscore. }
{------------------------------------------------------------------------------ }
{ SUITESPARSE_FORTRAN: macros created by CMake describing how C calls Fortran }
{------------------------------------------------------------------------------ }
{ SUITESPARSE_FORTAN: for Fortran routines with no "_" in their names }
{ SUITESPARSE__FORTAN: for Fortran routines with "_" in their names }
{ The decision on which of these macros to use is based on the presence of }
{ underscores in the original Fortran names, not the (commonly) appended }
{ underscore needed for C to all the corresponding Fortran routine. }
{ These two macros are created by the CMake module, FortranCInterface.cmake, }
{ which is then used by CMake to configure this file. }
{ The CMAKE decision can be superceded by setting -DBLAS_NO_UNDERSCORE, so }
{ that "dgemm" remains "dgemm" (for MS Visual Studio for example).  Setting }
{ -DBLAS_UNDERSCORE changes "dgemm" to "dgemm_", the common case for Mac and }
{ Linux. }
{------------------------------------------------------------------------------ }
{ SUITESPARSE_BLAS_INT: the BLAS/LAPACK integer (int32_t or int64_t) }
{------------------------------------------------------------------------------ }
{ CMake 3.22 and later allow the selection of the BLAS/LAPACK integer size. }
{ This information is then used to configure this file with the definition of }
{ this integer: int32_t or int64_t. }
{ When compiling SuiteSparse for a MATLAB mexFunction, the MATLAB libmwblas is }
{ used, which is a 64-bit integer version of the BLAS.  CMake is not used to }
{ configure SuiteSparse in this case.  The flag -DBLAS64 can be used to ensure }
{ a 64-bit BLAS is used.  Likewise, -DBLAS32 ensures a 32-bit BLAS is used. }
{$if defined ( BLAS64 )}
{ override the BLAS found by CMake, and force a 64-bit interface }

const
  SUITESPARSE_BLAS_INT = int64_t;  
(*** was #elif ****){$else defined ( BLAS32 )}
{ override the BLAS found by CMake, and force a 32-bit interface }

const
  SUITESPARSE_BLAS_INT = int32_t;  
{$else}
{ let CMake determine the size of the integer in the Fortran BLAS }
